--- a/views/index.hbs
+++ b/views/index.hbs
@@ -104,46 +104,13 @@
                     <div class="content">
                         <h2>Your device</h2>
                         <span>.Your battery is at </span>
-                        <br>
                         <span id="battery-content"></span>
-                        <span> percent. All this information is natively available from the Navigator js object.</span>
+                        <span> percent. <br> All this information is natively available from the Navigator js object.</span>
                         <ul class="actions">
                             <li>
                                 <a href="#" class="button alt">More</a>
                             </li>
                         </ul>
-                    </div>
-                </div>
-
-
-
-
-                <div class="feature left" style="width:100%;">
-                    <span class="image"><img src="images/pic03.jpg" alt="" style="width: 200rem; height: 25rem"/></span>
-                    <div class="content">
-                        <h2>Your location: boston college</h2>
-                        <p>Websites can find this from your IP, 136.167.204.223, and with Google's geolocation API, they can know your location.</p>
-                        <ul class="actions">
-                            <li>
-                                <a href="#" class="button alt">More</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-
-
-
-
-
-
-
-                <div class="feature right" style="width:100%;">
-                    <span class="image"><img src="images/pic04.jpg" alt="" style="width: 200rem; height: 25rem"/></span>
-                    <div class="content">
-                        <h2>Your device</h2>
-                        <span>.Your battery is at </span>
-                        <span id="battery-content"></span>
-                        <span> percent. All this information is natively available from the Navigator js object.</span>
                     </div>
                 </div>
 
